syntax = "proto3";

package ai.lzy.priv.v1;

import "ai/lzy/priv/v1/lzy-disk.proto";

option java_outer_classname = "LCES";
option java_package = "ai.lzy.priv.v1";

service LzyCachedEnvService {
  rpc SaveEnvConfig (SaveEnvConfigRequest) returns (SaveEnvConfigResponse);
  rpc MarkEnvReady (MarkEnvReadyRequest) returns (MarkEnvReadyResponse);
}

message SaveEnvConfigRequest {
  string workflow_name = 1;
  DiskType disk_type = 2;
  string docker_image = 3;
  string yaml_config = 4;
}

message SaveEnvConfigResponse {
  string env_id = 1;
  Disk disk = 2;
}

message MarkEnvReadyRequest {
  string workflow_name = 1;
  string disk_id = 2;
}

message MarkEnvReadyResponse {
}
